Bug 1000423 - Properly convert from appunits/layout device pixels to layer pixels for composition bounds calculation. r=botond, a=lsblakk

To get layer pixels (doesn't matter which layer, they are all the same to layout because there is no async transform) you need to multiply by the cumulative resolution.

The fact that our units system says that multiplying by the parent resolution will work is a problem with our units system.